# kwin-effects-snell-glass

src/: CMakeLists.txt  blur.cpp  blur.h  blur.kcfg  blur.qrc  settings.cpp  settings.h
src/kcm/: blur_config.ui
src/shaders/: downsample.glsl  glass.glsl  noise.glsl  onscreen_rounded.glsl  rim.glsl  snells-glass.glsl  upsample.glsl
